Fix image aspect ratio not preserved on IE

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -230,6 +230,10 @@ a {
 
       svg {
         width: 100%;
+
+        @media (max-width: 25.5em) {
+          max-height: calc(100vw / 16 * 9 - 2em / 16 * 9);
+        }
       }
 
       img {
